# RAG-APP

./: .gitignore  BRANCH_STRATEGY.md  Makefile  README.md  cleanup-branches.sh  run_generate_gold.sh
docker/: .env.example  docker-compose.yml  rag-app.postman_collection.json
docker/env/: .env.example.app
docker/minirag/: alembic.ini
docs/migration/: REMOVED_MONGODB_CODE.md
eval/: README.md  generate_gold.py
src/: .env.example  main.py  pyproject.toml  requirements.txt
src/controllers/: BaseController.py  DataController.py  NLPController.py  ProcessController.py  ProjectController.py  ProjectCoontroller.py
src/eval/: README.md  compare_runs.py  generate_gold.py  run_eval.py
src/eval/gold/: project_1.jsonl.example  project_1_ar.candidates.jsonl
src/eval/reports/: eval_none_none_20260519_194114.json
src/helpers/: config.py
src/models/: AssetModel.py  BaseDataModel.py  ChunkModel.py  ProjectModel.py  __init__.py
src/models/db_schemes/: asset.py  data_chunk.py  project.py
src/models/enums/: DataBaseEnum.py  ResponseEnums.py
src/models/minirag/: .gitignore  __init__.py
src/models/minirag/schemes/: __init__.py  asset.py  data_chunk.py  project.py
src/routes/: __init__.py  base.py  data.py  nlp.py
src/routes/schemes/: __init__.py  data.py  nlp.py
src/schemas/: __init__.py  data.py  nlp.py
src/scripts/: run_eval.sh  run_generate_gold.sh
src/stores/: __init__.py
src/stores/llm/: LLMEnterface.py  LLMInterface.py  LLMProviderFactory.py  __init__.py
src/stores/llm/enums/: LLMEnums.py  __init__.py
src/stores/llm/providers/: CohereProvider.py  OpenAiProvider.py  __init__.py
src/stores/llm/templates/: template_parser.py
src/stores/llm/templates/locales/ar/: query_adapter.py  rag.py  rerank.py
src/stores/llm/templates/locales/en/: query_adapter.py  rag.py  rerank.py
src/stores/vectordb/: VectorDBInterface.py  VectorDBProviderFactory.py  __init__.py
src/stores/vectordb/enums/: VectorDBEnums.py  __inti__.py
src/stores/vectordb/providers/: PGVectorProvider.py  QdrantDBProvider.py  QuadrantDBProvider.py  __init__.py
